k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-nodejs-deployment
  namespace: todo-app-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app-nodejs
  template:
    metadata:
      labels:
        app: todo-app-nodejs
    spec:
      containers:
      - name: todo-app-nodejs-container
        image: roohmeiy/todo-app-nodejs
        ports:
        - containerPort: 3000
