k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-nodejs-service
  namespace: todo-app-ns
  labels:
    app: todo-app-nodejs
spec:
  selector:
    app: todo-app-nodejs
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: NodePort
